# dailybot-mini-app

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: check.yml  github-pages.deploy.yml
bot/: constants.py  dto.py  handlers.py  jobs.py  main.py  misc.py
bot/database/: database.py  models.py
bot/database/models/: user.py
bot/services/: daily.py  user.py
bot/templates/: daily_report.html
core/: config.py
dev/db/: docker-compose.yml
migrations/: env.py
migrations/versions/: 4e307563ce01_add_allow_ids_table.py  6a3482d4534b_change_user_model.py  abd33e377ebe_init_daily_model.py  d5840160257f_init_user_model.py  d593cd64c8fd_add_sequence_on_daily_table.py
public/: daily-form.html
tests/bot/: test_handlers.py  test_jobs.py  test_misc.py
tests/bot/services/: test_daily.py  test_user.py
